--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,1 @@
-algorithm/__pycache__/gui.cpython-312.pyc
-algorithm/__pycache__/ga.cpython-312.pyc
-algorithm/__pycache__/aco.cpython-312.pyc
+algorithm/__pycache__/*
